# subscribe-and-store

./: .env  API.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: rust-ci.yml
.sqlx/: query-7b8a4d17629dffb164f2b835bf330b2e4b99eb8d13088069187acd8395b6116f.json  query-8ffb5f868da9873b4123b608d4bd5638b77a301c18db835bbfc12e26d493971d.json
db/: docker-compose.yml  init.sql
src/: main.rs  model.rs  mqtt.rs  sql.rs  temp.main.rs
