[package]
name = "subscribe-and-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12", default-features=false, features=["bundled"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
dotenv = "0.15"
time = "0.3.34"
futures = "0.3.30"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
once_cell = "1.19.0"
anyhow = "1.0.80"